--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#3F51B5" />
-    <meta name="description" content="likesweb" />
-    <title>Likes</title>
+    <meta name="theme-color" content="#263238" />
+    <meta name="description" content="This is a simple service to share likes." />
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+    <title>Likes Counter</title>
   </head>
   <body>
     <div id="root"></div>
